src/App.css
@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap");

* {
  font-family: "Rajdhani";
  font-weight: 700;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.drop-schedule {
  background-color: #282c34;
}

/* Scroll Bar */
body::-webkit-scrollbar {
  width: 0.35rem;
}
body::-webkit-scrollbar-track {
  background: #282c34;
}
body::-webkit-scrollbar-thumb {
  background: #61dafb;
  border-radius: 5px;
}

